objects/TracRTC__User_Group__c.object
<CustomObject>
    <fields>
        <fullName>TracRTC__Advanced_Round_Robin_Type__c</fullName>
        <label>Advanced Round Robin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Error_Message__c</fullName>
        <description>To hold the error message for an invalid user group.</description>
        <label>Error_Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TracRTC__Source_Id__c</fullName>
        <description>The Id of the source for the user group such as public group/roles/profiles</description>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Source_Object__c</fullName>
        <description>The type of the imported source the user group was created from.</description>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Sync_User_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not to sync the user group with its original source.</description>
        <label>Sync User Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__User_Group_Label__c</fullName>
        <label>User Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Group</label>
    <nameField>
        <label>User Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>TracRTC__User_Group_Manager__c</fullName>
        <label>User Group Manager</label>
    </sharingReasons>
</CustomObject>